--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,5 @@
-html {
-    background: #ccc;
-}
+@import "bourbon";
+@import "susy";
+@import "./bower_components/mappy-breakpoints/mappy-breakpoints";
+@import "styles";
+@import "forms";
