--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -1,7 +1,3 @@
-@import "bourbon";
-@import "susy";
-@import "./bower_components/mappy-breakpoints/mappy-breakpoints";
-
 
 //////////////////////// VARIABLES /////////////////////
 
@@ -15,8 +11,6 @@ $blue: #00baff;
 $purple: #3b006c;
 $brown: #1f1600;
 $black: #000;
-
-
 
 $alpha: 0.7;
 
@@ -44,19 +38,19 @@ $sectionH: 650px;
 $topBarH: 7rem;
 
 $off-canvas-width: 50%;
-$transition: all 300ms ease-in-out;
+$transition: all 200ms ease-in-out;
 
 @include selection {
   background-color: $orange;
 }
 
-$font1: 'fira-sans-2', helvetica, sans-serif;
+$font1: 'utopia-std-headline', helvetica, sans-serif;
 $font2: 'aktiv-grotesk-std', 'Aktiv Grotesk', helvetica, sans-serif;
 
 $navButtonColor: white;
 $navButtonFont: $font1;
 $navButtonWeight: 800;
-$navButtonTransform: uppercase;
+$navButtonTransform: normal;
 $navButtonbgColor: $orange;
 
 $susy: (
@@ -67,7 +61,7 @@ $susy: (
   container-position: center,
   columns: 12,
     gutter-position: after,
-  gutters: 0,
+  gutters: .25,
   debug: (
     image: hide,
     color: rgba(#ff66a7, .80),
@@ -125,13 +119,13 @@ p {
     margin-bottom: 1.3em;
     font-family: $font1;
     font-weight: $bold;
-    font-size: 1.7em;
+    font-size: 2.1em;
     line-height: 1.5em;
 }
 
-h1, h2, h3, h4, h5, small {
+h1, h2, h3, h4, h5, small, span {
     text-align: center;
-    text-transform: uppercase;
+    text-transform: normal;
     line-height: 0.9em;
     font-family: $font1;
     font-weight: 800;
@@ -146,7 +140,7 @@ h3 {font-size: 2.618em; letter-spacing: $tighter;}
 
 h4 {font-size: 1.618em;}
 
-small, .font_small {font-size: 1em;}
+small, .font_small {font-size: 1.5em;}
 
 strong { font-weight: $bold; }
 
@@ -203,8 +197,7 @@ header {
     color: $dark;
     line-height: 0.8em;
     font-weight: $bold;
-    font-size: 2em;
-    text-transform: uppercase;
+    text-transform: normal;
 }
 
 article {
@@ -222,13 +215,14 @@ article {
         
         .item {
             @include span(12);
-            min-height: 14rem;
+            min-height: 18rem;
             margin: gutter();
             background-color: $light;
 //            &:last-child { @include gallery(12 last); }
             
-            @include mappy-bp(large) {
+            @include mappy-bp(med) {
                 @include gallery(6);
+                padding: 1em;
                 &:last-child { @include gallery(6 last); }
                 }
             
@@ -238,7 +232,9 @@ article {
 }
 
 nav {
+    
     ul {
+        margin: 0;
         li {
             color: $navButtonColor;
             font-family: $navButtonFont;
@@ -268,7 +264,7 @@ nav {
 
 .cover {
 //    background: $orange;
-//@include background(linear-gradient(#f0f0f0, #ffffff) left repeat);
+//    @include background(linear-gradient(#f0f0f0, #ffffff) left repeat);
 //    .bg { background: url('../images/bg_stadium_2.jpg') repeat center center; }
 }
 
@@ -279,36 +275,12 @@ nav {
     
 }
 
-.s3 {
-    .bg { background: url('../images/bg_stadium_3.jpg') repeat center center; }
-}
-
-
-#grid_partnership { 
-    @include container(80%);
-    .item {
-            background-color: $light !important;
-        }
-}
-
-#grid_ourteam {  
-    @include container(100%);
-    @include layout(12 .1);
-    .item {
-            background-color: rgba($dark, 0.9) !important;
-            header { color: white !important; }
-        }
-}
-
 #grid_footer {
     .item {
         background-color: transparent !important;
         header { color: white !important; }
             }
 }
-
-
-
 
 
 .topBar {
@@ -334,13 +306,22 @@ nav {
             padding: 0 0.6em;
             line-height: $topBarH;
             background: $orange;
-    }    
+    } 
     
-    .logo img {
+    .logo {
         height: ($topBarH)-2;
         margin: 0.4em 0;
         width: auto;
+        
+        span {
+            line-height: $topBarH;
+            font-size: 40px;
+            @include mappy-bp(med) { font-size: 40px !important; }
+            @include mappy-bp(large) { font-size: 45px !important; }
+        }
     }
+    
+  
     
     nav {
         position: absolute;
@@ -364,11 +345,12 @@ nav {
 
 .topBar.reduce {
     height: ($topBarH)-3;
-        background: rgba($dark, $alpha);
+    background: rgba($dark, $alpha);
     @include transition($transition); 
     
     .menu-toggle { line-height: ($topBarH)-3; }
-     li { line-height: ($topBarH)-3; font-size: 1.2em }
+     li, .logo span { line-height: ($topBarH)-3; color: white; }
+    .logo span { font-size: 20px; }
     .logo img { @include transform(scale(0.5) translateY(-1.9rem)); }
 }
 
@@ -407,7 +389,7 @@ nav {
     
     li {
         font-size: 2em !important;
-        line-height: 0.8em !important;
+        line-height: 1em !important;
         &:hover {
             line-height: 2em !important;
         }
@@ -420,6 +402,7 @@ nav {
         text-align: center;
         padding: 5rem 1rem;
         
+        span { color: white; font-size: 30px; }
         
         img { width: 8rem; height: auto; }
         
@@ -448,126 +431,3 @@ nav {
 }
 
 
-/////////////////////   FORMS  /////////////////
-
-.form-group{
-    font-family: 'Open Sans Condensed', arial, sans;
-    width: 500px;
-    padding: 30px;
-    background: #FFFFFF;
-    margin: 50px auto;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
-    -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
-    -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
-
-}
-.form-group h2{
-    background: #4D4D4D;
-    text-transform: uppercase;
-    font-family: 'Open Sans Condensed', sans-serif;
-    color: #797979;
-    font-size: 18px;
-    font-weight: 100;
-    padding: 20px;
-    margin: -30px -30px 30px -30px;
-}
-.form-group input[type="text"],
-.form-group input[type="date"],
-.form-group input[type="datetime"],
-.form-group input[type="email"],
-.form-group input[type="number"],
-.form-group input[type="search"],
-.form-group input[type="time"],
-.form-group input[type="url"],
-.form-group input[type="password"],
-.form-group textarea,
-.form-group select 
-{
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    outline: none;
-    display: block;
-    width: 100%;
-    padding: 7px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-    background: transparent;
-    margin-bottom: 10px;
-    font: 16px Arial, Helvetica, sans-serif;
-    height: 45px;
-}
-.form-group textarea{
-    resize:none;
-    overflow: hidden;
-}
-.form-group input[type="button"], 
-.form-group input[type="submit"]{
-    -moz-box-shadow: inset 0px 1px 0px 0px #45D6D6;
-    -webkit-box-shadow: inset 0px 1px 0px 0px #45D6D6;
-    box-shadow: inset 0px 1px 0px 0px #45D6D6;
-    background-color: $orange;
-    border: none;
-    display: inline-block;
-    cursor: pointer;
-    color: #FFFFFF;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 14px;
-    padding: 8px 18px;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-.form-group input[type="button"]:hover, 
-.form-group input[type="submit"]:hover {
-    background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
-    background-color:#ca6834;
-}
-
-
-///////////////////////   FOOTER  /////////////////
-//
-//
-//
-//
-//.footer {
-//    background: $dark;
-//    bottom: 0;
-//
-//        .content {
-//            padding-top: 3rem;
-//        }
-//    
-//        .grid {
-//            margin: 2rem 0;
-//            padding: 0;
-//            
-//            header {
-//                color: $grey;
-//                font-size: 1.5em;
-//            }
-//        
-//            .item {
-//                @include span(6);
-//                display: block;
-//                padding: gutter();
-//                min-height: 5rem;
-//                
-//                &:last-child {
-//                    @include span(6 last);
-//                    
-//                }
-//            }
-//        }
-//    
-//        .copyright {
-//            position: absolute;
-//            bottom: 0;
-//            height: 1.5em;
-//            width: 100%;
-//            color: $light;
-//            text-align: center;
-//            font-family: $font1;
-//            font-weight: 800;
-//        }
-//    
-//}
