--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,18 @@
+
+
+/* VENDOR
+========================================================================== */
+
 @import "bourbon";
 @import "susy";
 @import "./bower_components/mappy-breakpoints/mappy-breakpoints";
-@import "styles";
-@import "forms";
+
+/* BASE 
+========================================================================== */
+
+@import '_variables.scss';
+@import '_base.scss';
+@import '_styles.scss';
+@import '_forms.scss';
+@import '_off-canvas.scss';
+
