--- a/resources/assets/sass/_styles.scss
+++ b/resources/assets/sass/_styles.scss
@@ -96,14 +96,14 @@
 /* FOOTER
 ========================================================================== */
 
-footer {
-    bottom: 0;
-    height: 100vh;
-    background: $dark;
-    
-    .footerHeader h2 { color: $secondaryColor; }
-    
-    .item {
-        header h3 { color: $secondaryColor; }
-        }
-}
+//footer {
+//    bottom: 0;
+//    height: 100vh;
+//    background: $dark;
+//    
+//    .footerHeader h2 { color: $secondaryColor; }
+//    
+//    .item {
+//        header h3 { color: $secondaryColor; }
+//        }
+//}
