--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -46,7 +46,7 @@ $loginButtonColor: $light;
 $loginButtonHoverBg: $dark;
 $loginButtonHoverColor: $light;
 
-$font1: 'Passion One', helvetica, sans-serif;
+$font1: 'Lobster', helvetica, sans-serif;
 $font2: 'Lato', helvetica, sans-serif;
 
 $navButtonColor: $primaryColor;
