--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, small, span {
   text-align: center;
   text-transform: uppercase;
   line-height: 0.9em;
-  font-family: "Passion One", helvetica, sans-serif;
+  font-family: "Lobster", helvetica, sans-serif;
   font-weight: 400;
   margin: 0.3em;
   padding: 0.3em;
@@ -139,7 +139,9 @@ body, .content, .bg, footer, section, ul, .topBar, .logoutButton, .loginButton {
 section {
   z-index: 2;
   min-height: 100vh;
-  background: #e8e8e8; }
+  background: #fff;
+  background: linear-gradient(to bottom, #fff 0%, #e8e8e8 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); }
   section .content {
     z-index: -3; }
 
@@ -159,7 +161,7 @@ header {
 
 .sectionHeader h1, .sectionHeader h2, .sectionHeader h3, .footerHeader h1, .footerHeader h2, .footerHeader h3 {
   text-align: right;
-  font-family: "Passion One", helvetica, sans-serif;
+  font-family: "Lobster", helvetica, sans-serif;
   font-weight: 400;
   letter-spacing: -0.04em; }
 
@@ -177,7 +179,7 @@ img {
 .copyright {
   bottom: 0;
   line-height: 2em;
-  font-family: "Passion One", helvetica, sans-serif;
+  font-family: "Lobster", helvetica, sans-serif;
   font-size: 1.5em;
   color: #6a6a6a;
   text-align: center;
@@ -221,11 +223,51 @@ img {
         float: right;
         margin-right: 0; } }
 
+.flex-container {
+  height: 100vh;
+  padding: 3em;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-line-pack: center;
+  -webkit-align-content: center;
+  align-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.new {
+  font-family: "Lobster", helvetica, sans-serif;
+  font-size: 6em;
+  color: #6a6a6a;
+  text-align: center; }
+
+.new {
+  display: block;
+  -webkit-order: 0;
+  -ms-flex-order: 0;
+  order: 0;
+  -webkit-flex: 0 0 100%;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  -ms-flex-item-align: center;
+  -webkit-align-self: center;
+  align-self: center; }
+
 /* NAVIGATION
 ========================================================================== */
 nav li {
   color: #151515;
-  font-family: "Passion One", helvetica, sans-serif;
+  font-family: "Lobster", helvetica, sans-serif;
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: -0.03em;
@@ -314,7 +356,7 @@ nav li {
     background: #ff7600;
     color: #e8e8e8;
     text-align: center;
-    font-family: "Passion One", helvetica, sans-serif;
+    font-family: "Lobster", helvetica, sans-serif;
     font-size: 2.5em;
     line-height: 2em;
     text-transform: uppercase; }
