--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -52,7 +52,7 @@ body, .content, .bg, footer, section, ul, .topBar, .logoutButton, .loginButton {
 section {
     z-index: index($elements, section);
     min-height: 100vh;
-    background: $fourthColor;
+    @include linearGradient($gradientWhite, $gradientLight);
 
     .content {
         z-index: -3;
@@ -132,6 +132,50 @@ img {
         }
 }
 
+
+.flex-container {
+    height: 100vh;
+    padding: 3em;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    }
+
+.new {
+    font-family: $font1;
+    font-size: 6em;
+    color: $thirdColor;
+    text-align: center;
+//    background: $gradientGrey;
+}
+
+.new {
+    display: block;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 0 0 100%;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    align-self: center;
+    }
 
 
 /* NAVIGATION
